reverting change. changing index css instead

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
       margin-top: 1.0em;
       background-color: #698e9b;
       font-family: Helvetica, Arial, FreeSans, san-serif;
-      color: #000000;
+      color: #E5D7B7;
     }
     #container {
       margin: 0 auto;
       width: 700px;
     }
-    h1 { font-size: 3.8em; color: #967164; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
     h2 { font-size: 1.5em; color: #967164; }
@@ -29,6 +28,7 @@
     .footer { text-align:center; padding-top:30px; font-style: italic; }
   </style>
   
+	<link href="http://finitestategames.com/style/style.css" rel="stylesheet" type="text/css" />
 	<meta name='viewport' content="width=device-width, initial-scale=1" />
 	<script src="http://finitestategames.com/scripts/namespace.js" type="text/javascript"></script>
 	<script src="http://finitestategames.com/scripts/webformatting.js" type="text/javascript"></script>
